Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -88,7 +88,11 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA</p>
 
 <h2>Changelog</h2>
 
-<h3>2.0 (7 May 2012)</h3>
+<h3>2.0.1 (7 May 2013)</h3>
+
+<ul>
+<li>Updating the year of the release of 2.0</li>
+</ul><h3>2.0.0 (7 May 2013)</h3>
 
 <ul>
 <li>Disabling the admin menu by default</li>
@@ -123,9 +127,7 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA</p>
 <li>Official Release</li>
 </ul><h2>Author Information</h2>
 
-<p>The WordPress Plugin Boilerplate was originally started and is maintained by <a href="http://twitter.com/tommcfarlin/">Tom McFarlin</a>. </p>
-
-<p>It is constantly under development thanks to the contributions from the many WordPress developers throughout the world.</p>
+<p>The WordPress Plugin Boilerplate was originally started and is maintained by <a href="http://twitter.com/tommcfarlin/">Tom McFarlin</a>, but is constantly under development thanks to the contributions from the many WordPress developers throughout the world.</p>
       </section>
     </div>
 
