Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -90,7 +90,11 @@ Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA</p>
 
 <h2>Changelog</h2>
 
-<h3>2.2.0 (10 May 2013)</h3>
+<h3>2.2.1 (10 May 2013)</h3>
+
+<ul>
+<li>Updating the <code>.pot</code> file as it was resulting in a minor error in one of the translation tools.</li>
+</ul><h3>2.2.0 (10 May 2013)</h3>
 
 <ul>
 <li>Updating the README so the demo changelog is more accurate</li>
